--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,16 @@
-pandas
+fastapi==0.121.0
+great_expectations==1.9.0
+ipykernel==7.1.0
+matplotlib==3.10.7
+mlflow==3.6.0
+pandas==2.3.3
+scikit-learn==1.7.2
+uvicorn==0.38.0
+uvloop==0.22.1
+watchdog==6.0.0
+xgboost==3.1.1
+streamlit==1.51.0
+great_expectations==1.9.0
+evidently==0.7.15
+numpy==2.3.4
+lightgbm==4.6.0
